# ContourIntegralMethod

./: .zenodo.json  CMakeLists.txt  flake.nix
include/: cim.hpp
src/: cim.cxx
test/: tests.cxx
